syntax = "proto3";

package cache;

option go_package = "shared/proto/cacheNodepb";

service Cache {
   rpc Get(GetRequest) returns (GetResponse);
   rpc Set(SetRequest) returns (SetResponse);
   rpc GetAllKeys(GetAllKeysRequest) returns (GetAllKeysResponse);
   rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
   string key = 1;  
}

message GetResponse {
   string value = 1;
   bool found = 2;
}

message SetRequest {
   string key = 1;
   string value = 2;
}

message SetResponse {
   bool success = 1;
}

message GetAllKeysRequest {}

message GetAllKeysResponse {
   repeated string keys = 1;
}

message DeleteRequest {
   string key = 1;
}

message DeleteResponse {
   bool success = 1;
}